--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,11 @@
 <nav class="nav">
-    <h1><a routerLink="">E-Comm</a> </h1>
+    <h1><a routerLink="">SHOPPICK</a> </h1>
     <div *ngIf="menuType!=='seller'" class="nav-search">
       <input type="text"
       #searchInput
-      (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="Search Products" />
-      <button (click)="submitSearch(searchInput.value)" >Search</button>
+      (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="What's on your mind?" />
+      <button (click)="submitSearch(searchInput.value)" > <mat-icon>search</mat-icon></button>
+      
       <ul class="suggested-search" *ngIf="searchResult">
         <li *ngFor="let item of searchResult">
           <a (mousedown)="redirectToDetails(item.id)" >{{item.name}}</a>
@@ -13,25 +14,25 @@
     </div>
    <div [ngSwitch]="menuType">
     <ul *ngSwitchCase="'default'" >
-      <li><a routerLink="seller-auth">Seller</a></li>
-      <li><a routerLink="">Home</a></li>
-      <li><a routerLink="user-auth">Login/Sign-up</a></li>
-      <li><a href="#">Cart({{cartItems}})</a></li>
+      <li><a routerLink=""></a>Home<mat-icon>home</mat-icon></li>
+      <li><a routerLink="user-auth">Login/Sign-up</a><mat-icon>person</mat-icon></li>
+      <li><a href="#">Cart({{cartItems}})</a><mat-icon>local_grocery_store</mat-icon></li>
+      <li><a routerLink="seller-auth">Seller</a> <mat-icon>group</mat-icon></li>
     </ul>
     <ul *ngSwitchCase="'user'" >
-      <li><a routerLink="seller-auth">Seller</a></li>
-      <li><a routerLink="">Home</a></li>
-      <li><a>{{userName | titlecase}}</a></li>
-      <li><a routerLink="my-orders" >My Orders</a></li>
-      <li><a (click)="userLogout()" >Logout</a></li>
-  
-      <li><a [routerLink]="cartItems>0?'cart-page':null">Cart({{cartItems}})</a></li>
+      <li><a routerLink="">Home</a><mat-icon>home</mat-icon></li>
+      <li><a>{{userName | titlecase}}</a><mat-icon>person</mat-icon></li>
+      <li><a routerLink="my-orders" >My Orders</a><mat-icon>apps</mat-icon></li>
+      <li><a (click)="userLogout()" >Logout</a><mat-icon>directions_bike</mat-icon></li>
+      
+      <li><a [routerLink]="cartItems>0?'cart-page':null">Cart({{cartItems}})</a><mat-icon>local_grocery_store</mat-icon></li>
     </ul>
-    <ul *ngSwitchCase="'seller'" >
-      <li><a routerLink="seller-add-product">Add Product</a></li>
-      <li><a routerLink="seller-home">List</a></li>
-      <li><a (click)="logout()">Logout</a></li>
+    <ul *ngSwitchCase="'default'" >
+      <li><a routerLink="seller-add-product">Add Product</a><mat-icon>add</mat-icon></li>
+      <li><a routerLink="seller-home">List</a><mat-icon>collections</mat-icon></li>
+      <li><a (click)="logout()">Logout</a><mat-icon>directions_bike</mat-icon></li>
       <li><a href="#">{{sellerName | titlecase}}</a></li>
     </ul>
    </div>
   </nav>
+  <i class="fa-solid fa-magnifying-glass"></i>
