--- a/src/app/seller-home/seller-home.component.css
+++ b/src/app/seller-home/seller-home.component.css
@@ -1,16 +1,19 @@
-table{
-    text-align: left;
-    color: blueviolet;
-    border-collapse: collapse;
-}
+
 img{
     height: 100px;
     width: 100px;
 }
 table td , table th{
-    border: 1px solid blueviolet;
+  
     padding: 10px;
     min-width: 160pxs;
+    max-height: 10px;
+    border-radius: 2rem;
+}
+
+table th.des{
+    max-height: 20px;
+    max-width: 20px;
 }
 .adjust-update-link{
     margin-left: 10px;
