--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,7 +1,7 @@
 <div class="product-list">
     <h1>Product List</h1>
     <p class="message-p">{{ productMessage }}</p>
-    <table>
+    <table class="table table-striped table-bordered">
       <thead>
         <tr>
           <th>Image</th>
@@ -9,7 +9,7 @@
           <th>Price</th>
           <th>Color</th>
           <th>Category</th>
-          <th>Description</th>
+          <th class="des">Description</th>
           <th>Action</th>
         </tr>
       </thead>
