--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <ul>
         <li>
-          <a href="">Become a Seller</a>
+          <a routerLink="seller-home">Become a Seller</a>
         </li>
         <li>
           <a href="">Polices</a>
@@ -28,6 +28,6 @@
             <a href="">FAQ</a>
         </li>
       </ul>
-      <p>© 2022 E-comme Project</p>
+      <p>© 2024 SHOPPICK </p>
       
 </div>
