--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,17 @@
+.col-sm-3{
+    
+  background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+}
+
+.col-sm-3:hover{
+    transform: scale(1.05);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
 .product-header-image{
     object-fit: contain;
     width: 100%;
@@ -18,6 +32,12 @@
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     padding: 15px;
+}
+.product-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .product-item .name-head{
