--- a/src/styles.css
+++ b/src/styles.css
@@ -53,3 +53,5 @@ body {
   .max-width{
     width: 100%;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
